# FlashAttention-pytorch

./: .gitignore  README.md  data.py  model.py  pyproject.toml  setup.py
benchmarks/: bench_compare_all.py  bench_fa1.py  bench_fa2.py  bench_fa3.py  bench_utils.py  plotting.py
csrc/common/: bindings.cpp  torch.extension.cpp
csrc/fa1/: fa1_bwd.cu  fa1_fwd.cu
csrc/fa2/: fa2_bwd.cu  fa2_fwd.cu
csrc/fa3/: fa3_bwd.cu  fa3_fwd.cu
pytorch/: FlashAttention_gpt3.ipynb  configs.py  train.py  visualization.py
src/common/: __init__.py  correctness.py  dropout.py  mask.py  utils.py
src/fa1/: __init__.py  op.py  spec.py
src/fa1/cuda/: __init__.py  impl.py
src/fa1/torch/: __init__.py  impl.py
src/fa1/triton/: __init__.py  impl.py  kernels_bwd.py  kernels_fwd.py
src/fa2/: __init__.py  op.py  spec.py
src/fa2/cuda/: __init__.py  impl.py
src/fa2/torch/: __init__.py  impl.py
src/fa2/triton/: __init__.py  impl.py  kernels_bwd.py  kernels_fwd.py
src/fa3/: __init__.py  op.py  spec.py
src/fa3/cuda/: __init__.py  impl.py
src/fa3/torch/: __init__.py  flashattention_pytorch.py  impl.py
src/fa3/triton/: __init__.py  impl.py  kernels_bwd.py  kernels_fwd.py
tests/: conftest.py  test_correctness_fa1.py  test_correctness_fa2.py  test_correctness_fa3.py  utils.py
