[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashattention-lab"
version = "0.0.0"
description = "Minimal FlashAttention reference kernels (PyTorch/Triton/CUDA) for benchmarking and testing."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["flashattention", "pytorch", "triton", "cuda"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]
bench = ["matplotlib>=3.5"]
dev = ["pytest>=7.0", "matplotlib>=3.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
